<resources>
    <string name="app_name">Shoe Inventory</string>
   <string name="login_screen_label">Login</string>
   <string name="welcom_screen_label">Welcome</string>
   <string name="Instruction_screen_label">Instructions</string>
   <string name="shoeList_screen_label">Shoe Listing</string>
   <string name="shoeDetail_screen_label">Shoe Detail</string>
    <string name="username">username</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="enter_username">Enter Username</string>
    <string name="welcome_login_message">Let\'s Get Started\nPlease Sign In</string>
    <string name="instruction_one">Press the Floating action button to add a new shoe to the inventory.</string>
    <string name="instruction_two">Fill the details of the Shoe in the edit text in the shoe detail screen and press save.</string>
    <string name="get_started">get started</string>
    <string name="instructions_heading">Instructions\non\nhow to get started</string>
    <string name="welcome_heading">Welcome\nto the\nShoe Store Inventory</string>
    <string name="welcome_text_two">All your Shoes in one Place</string>
    <string name="add_new_shoe">add new shoe</string>
    <string name="shoe_detail_heading">Add Shoe to the Inventory</string>
    <string name="shoe_name_label">Shoe Name</string>
    <string name="name_hint">Name</string>
    <string name="shoe_description_label">Shoe Description</string>
    <string name="description_hint">Description</string>
    <string name="shoe_company_label">Shoe Company</string>
    <string name="company_hint">Company</string>
    <string name="shoe_color_label">Shoe Color</string>
    <string name="color_hint">Color</string>
    <string name="shoe_size_label">Shoe Size</string>
    <string name="shoe_name">Name: %s</string>
    <string name="shoe_description">Description: %s</string>
    <string name="shoe_company">Company: %s</string>
    <string name="shoe_color">Color: %s</string>
    <string name="shoe_size">Size: %s</string>
 <string name="logout">Logout</string>
 <string name="save">Save</string>
 <string name="cancel">Cancel</string>
 <string name="size_hint">Size</string>
 <string name="continue_text">Continue</string>
 <string name="shoe_image_text">shoe image</string>
</resources>