<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoeViewModel"
            type="com.tunde.shoeinventory.viewmodel.ShoeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".screens.shoedetail.ShoeDetailFragment">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:text="@string/shoe_detail_heading"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/shoeName_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/shoe_name_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shoeName_textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/layout_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoeName_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shoeDescription_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={shoeViewModel.shoeName}"
                    android:hint="@string/name_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/shoeDescription_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/shoe_description_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoeName_textInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shoeDescription_textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/layout_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoeDescription_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shoeName_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={shoeViewModel.shoeDescription}"
                    android:hint="@string/description_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/shoeCompany_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/shoe_company_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoeDescription_textInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shoeCompany_textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/layout_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoeCompany_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shoeCompany_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={shoeViewModel.shoeCompany}"
                    android:hint="@string/company_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/shoeColor_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/shoe_color_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoeCompany_textInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shoeColor_textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/layout_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoeColor_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shoeColor_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={shoeViewModel.shoeColor}"
                    android:hint="@string/color_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/shoeSize_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/shoe_size_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoeColor_textInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shoeSize_textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/layout_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoeSize_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shoeSize_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={`` + shoeViewModel.shoeSize}"
                    android:hint="Size" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:text="Save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cancel_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoeSize_textInputLayout" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/save_button"
                app:layout_constraintTop_toTopOf="@+id/save_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>